[gd_scene load_steps=10 format=3 uid="uid://b45j3h5v30nqu"]

[ext_resource type="PackedScene" uid="uid://b1d1royapmy6v" path="res://tilemap.tscn" id="1_ruvcn"]
[ext_resource type="PackedScene" uid="uid://vlj84j14bwrh" path="res://player.tscn" id="3_a445d"]
[ext_resource type="PackedScene" uid="uid://bd2sxgfl0s5ac" path="res://background.tscn" id="3_sikji"]
[ext_resource type="Script" path="res://boss1.gd" id="4_or7bq"]
[ext_resource type="Texture2D" uid="uid://5q5im3o1qde4" path="res://PikPng.com_blue-flame-png_840679.png" id="5_y2jeq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rygim"]
size = Vector2(112, 117)

[sub_resource type="Animation" id="Animation_mtgpq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_6a760"]
resource_name = "boss1"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -10), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vstd2"]
_data = {
"RESET": SubResource("Animation_mtgpq"),
"boss1": SubResource("Animation_6a760")
}

[node name="boss_room" type="Node2D"]

[node name="Label" type="Label" parent="."]
visible = false
offset_left = 342.0
offset_top = 235.0
offset_right = 426.0
offset_bottom = 261.0
text = "YOU WIN!!!"

[node name="grid" parent="." instance=ExtResource("1_ruvcn")]
scale = Vector2(2, 2)
cell_quadrant_size = 14
layer_0/tile_data = PackedInt32Array(1048579, 589824, 1, 1048580, 589824, 1, 1048581, 589824, 1, 327683, 589824, 1, 327684, 589824, 1, 327685, 589824, 1, 327686, 589824, 1, 327687, 589824, 1, 327688, 589824, 1, 327689, 589824, 1, 327690, 589824, 1, 327691, 589824, 1, 327692, 589824, 1, 327693, 589824, 1, 327694, 589824, 1, 327695, 589824, 1, 327696, 589824, 1, 327697, 589824, 1, 327698, 589824, 1, 327699, 589824, 1, 327700, 589824, 1, 327701, 589824, 1, 327702, 589824, 1, 327703, 589824, 1, 327704, 589824, 1, 327705, 589824, 1, 1048582, 589824, 1, 1048583, 589824, 1, 1048584, 589824, 1, 1048585, 589824, 1, 1048586, 589824, 1, 1048587, 589824, 1, 1048588, 589824, 1, 1048589, 589824, 1, 1048590, 589824, 1, 1048591, 589824, 1, 1048592, 589824, 1, 1048593, 589824, 1, 1048594, 589824, 1, 1048595, 589824, 1, 1048596, 589824, 1, 1048597, 589824, 1, 1048598, 589824, 1, 1048599, 589824, 1, 1048600, 589824, 1, 1048601, 589824, 1, 917529, 589824, 1, 983065, 589824, 1, 393241, 589824, 1, 458777, 589824, 1, 524313, 589824, 1, 589849, 589824, 1, 655385, 589824, 1, 720921, 589824, 1, 786457, 589824, 1, 851993, 589824, 1, 393216, 589824, 1, 458752, 589824, 1, 524288, 589824, 1, 589824, 589824, 1, 655360, 589824, 1, 720896, 589824, 1, 786432, 589824, 1, 851968, 589824, 1, 917504, 589824, 1, 983040, 589824, 1, 1048576, 589824, 1, 327680, 589824, 1, 327681, 589824, 1, 1048577, 589824, 1, 327682, 589824, 1, 1048578, 589824, 1)

[node name="background" parent="." instance=ExtResource("3_sikji")]
position = Vector2(373, 308.055)
scale = Vector2(2.77344, 336.11)

[node name="fullplayer" parent="." instance=ExtResource("3_a445d")]
position = Vector2(86, 394)

[node name="boss1" type="Node2D" parent="."]
script = ExtResource("4_or7bq")

[node name="sprite" type="Sprite2D" parent="boss1"]
position = Vector2(636, 376)
scale = Vector2(0.3, 0.3)
texture = ExtResource("5_y2jeq")

[node name="damagearea" type="Area2D" parent="boss1"]
position = Vector2(41, 0)
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="boss1/damagearea"]
position = Vector2(592, 388.5)
shape = SubResource("RectangleShape2D_rygim")

[node name="AnimationPlayer" type="AnimationPlayer" parent="boss1"]
autoplay = "boss1"
libraries = {
"": SubResource("AnimationLibrary_vstd2")
}

[connection signal="area_entered" from="boss1/damagearea" to="boss1" method="_on_damagearea_area_entered"]
[connection signal="body_entered" from="boss1/damagearea" to="boss1" method="_on_damagearea_body_entered"]
[connection signal="body_exited" from="boss1/damagearea" to="boss1" method="_on_damagearea_body_exited"]
